--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   box-sizing: border-box;
 }
 
+body:hover {
+  background-image: url("https://viewcount-hanoimaps.vercel.app/api/count");
+}
+
 #map {
   width: 100%;
   height: 100%;
