--- a/villas/villas.css
+++ b/villas/villas.css
@@ -28,16 +28,53 @@ a {
 }
 
 .maplibregl-popup-content {
-  background: rgba(30, 30, 30, 0.8);
+  background-color: rgba(30, 30, 30, 0.8);
   color: white;
   display: flex;
   flex-direction: column;
-  backdrop-filter: blur(5px);
   border-radius: 12px;
   padding: 12px;
-  max-width: 300px;
-  min-width: 200px;
+  gap: 4px;
+  max-width: 160px;
 }
 .maplibregl-popup-anchor-bottom .maplibregl-popup-tip {
-  border-top-color: rgba(30, 30, 30, 0.85);
+  border-top-color: rgba(30, 30, 30, 0.8);
+}
+
+/* ===== POPUP ===== */
+.menu-popup {
+  position: absolute;
+  top: 0%;
+  left: 0;
+  margin-top: -2px;
+  margin-left: -2px;
+  background-color: rgba(30, 30, 30, 1);
+  color: white;
+  border-radius: 8px;
+  padding: 12px;
+  width: 160px;
+  line-height: 130%;
+  font-size: 12px;
+  z-index: 10;
+  display: none;
+}
+
+.menu-popup ul {
+  margin: 8px 0 0 0;
+  padding: 0;
+  list-style-type: none;
+}
+.menu-popup p {
+  margin: 0;
+}
+
+.menu-popup.active {
+  display: block;
+}
+
+.maplibregl-ctrl-menu {
+  background-image: url('data:image/svg+xml;charset=utf8,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"%3E%3Ctext x="10" y="16" text-anchor="middle" font-size="16" font-family="Arial, sans-serif" font-weight="bold" fill="%23333"%3Ei%3C/text%3E%3C/svg%3E');
+  background-size: 18px 18px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
