--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
+    Arial, sans-serif;
   overflow: hidden;
   background-color: #222;
   box-sizing: border-box;
@@ -31,7 +32,7 @@ body:hover {
   top: 10px;
   right: 10px;
   background: white;
-  padding: 6px;
+  padding: 5px;
   border-radius: 8px;
   border: 1px solid #ccc;
   z-index: 1000;
@@ -60,11 +61,12 @@ body:hover {
 }
 
 /* Style Switcher Button */
-.maplibregl-ctrl-group .style-switcher-button {
+.maplibregl-ctrl-group .style-switcher-button,
+#street-view-btn {
   width: 29px;
   height: 29px;
   background-color: #fff;
-  border: none;
+  border: 1px solid #ccc;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -73,17 +75,40 @@ body:hover {
   border-radius: 4px;
 }
 
-.maplibregl-ctrl-group .style-switcher-button .style-switcher-icon {
+.maplibregl-ctrl-group .style-switcher-button .style-switcher-icon,
+#street-view-btn .style-switcher-icon {
   width: 18px;
   height: 18px;
   filter: invert(0%);
   transition: filter 0.3s ease;
 }
-.maplibregl-ctrl-group
-  .style-switcher-button.is-satellite
-  .style-switcher-icon {
+.maplibregl-ctrl-group .style-switcher-button.is-satellite .style-switcher-icon,
+#street-view-btn.active .style-switcher-icon {
   filter: invert(100%);
 }
-.maplibregl-ctrl-group .style-switcher-button.is-satellite {
+.maplibregl-ctrl-group .style-switcher-button.is-satellite,
+#street-view-btn.active {
   background-color: rgba(30, 30, 30);
+}
+/* Popup Styles */
+.maplibregl-popup-content {
+  border-radius: 8px !important;
+}
+
+.maplibregl-popup-close-button {
+  font-size: 24px !important;
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  top: 4px !important;
+  right: 4px !important;
+  color: #555;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+}
+.maplibregl-popup-close-button:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+  color: #000;
 }
